sm-collab-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sm-collab
    labels:
        application: sm-collab
spec:
    replicas: 2
    selector:
        matchLabels:
            application: sm-collab
    template:
        metadata:
            name: sm-collab
            labels:
                application: sm-collab
        spec:
            affinity:
                podAntiAffinity:
                  preferredDuringSchedulingIgnoredDuringExecution:
                    - weight: 100
                      podAffinityTerm:
                        topologyKey: topology.kubernetes.io/zone
            containers:
                - name: sm-collab
                  image: mchekini/staff-manager-ui:1.0.0
                  imagePullPolicy: Always
                  ports:
                    - containerPort: 80
