sm-collab-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-collab
  namespace: staff-manager
spec:
  selector:
      app: sm-collab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
